# gsn2x

./: .gitignore  404.html  Cargo.toml  Dockerfile  LICENSE.md  README.md  SECURITY.md  TODOS.md  USAGES.md  adv_evidence.html  adv_evidences.html  adv_fmt_bullet_lists.html  adv_fmt_hyperlinks.html  adv_fmt_text_emphasis.html  adv_fmt_text_layout.html  adv_formatting.html  adv_interfacing.html  adv_layers.html  adv_layout.html  adv_linebreaks.html  adv_statistics.html  adv_stylesheets.html  advanced_usecases.html  basic_usage.html  build.rs  checks.html  confidence.html  deny.toml  design_goals.html  example.gsn.dot  example.gsn.md  example.gsn.yaml  ext_confidence.html  ext_dialectic.html  ext_mod.html  ext_mod_distdev.html  ext_mod_info.html  gsn2dot.yslt  gsn2x.cmd  history.html  (+26 more)
.cargo/: audit.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  rust.yml  rust_coverage.yml  rust_test.yml
dirgraphsvg/: README.md
dirgraphsvg/examples/: simple.rs
dirgraphsvg/src/: graph.rs  lib.rs
doc/: book.toml  svg.css
doc/src/: SUMMARY.md  adv_evidence.md  adv_evidences.md  adv_fmt_bullet_lists.md  adv_fmt_hyperlinks.md  adv_fmt_text_emphasis.md  adv_fmt_text_layout.md  adv_formatting.md  adv_interfacing.md  adv_layers.md  adv_layout.md  adv_linebreaks.md  adv_statistics.md  adv_stylesheets.md  advanced_usecases.md  basic_usage.md  checks.md  confidence.md  design_goals.md  ext_confidence.md  ext_dialectic.md  ext_mod.md  ext_mod_distdev.md  ext_mod_info.md  history.md  interfacing.md  migration.md  migration_v2x.md  mod_info.md  modular_extension.md  standard_support.md  troubleshooting.md  yaml_syntax.md
examples/: bullet_lists.gsn.yaml  confidence.gsn.yaml  entangled.gsn.yaml  evidence.md  evidences.md  example.css  example.gsn.md  example.gsn.test.dot  example.gsn.test.md  example.gsn.yaml  simple.rs
examples/dialectic/: first.gsn.yaml  index.gsn.yaml  second.gsn.yaml
examples/minimalcss/: min.css  min.gsn.yaml
examples/modular/: complete.gsn.test.dot  evidences.md  index.gsn.yaml  main.gsn.yaml  modular.css  sub1.gsn.yaml  sub2.gsn.yaml  sub3.gsn.yaml
examples/template/: instance.gsn.yaml  inval1_instance.gsn.yaml  template.gsn.yaml
html/: 404.html  adv_evidence.html  adv_formatting.html  adv_layers.html  advanced_usecases.html  basic_usage.html  confidence.html  design_goals.html  history.html  interfacing.html  migration_v2x.html  mod_distdev.html  print.html  searchindex.json  standard_support.html  troubleshooting.html
src/: LICENSE.md  diagnostics.rs  dirgraph.rs  dirgraphsvg.rs  file_utils.rs  graph.rs  gsn.rs  lib.rs  main.rs  outputs.rs  render.rs  util.rs  wordwrap.rs  yaml_fix.rs
src/dirgraph/: mod.rs
src/dirgraphsvg/: edges.rs  graph.rs  layout.rs  mod.rs  nodes.rs  render.rs  util.rs
src/edges/: mod.rs
src/gsn/: check.rs  mod.rs  validation.rs
src/nodes/: box_node.rs  (+10 more)
templates/: architecture.dot  argument.dot  complete.dot  evidences.md  gsn2dot.dot  macros.dot
tests/: additionals.yaml  arch.gsn.test.dot  basics.rs  bullet_lists.gsn.yaml  circle1.yaml  circle2.yaml  circle3.yaml  circular.yaml  circular2.yaml  cli.rs  complete.gsn.test.dot  empty.md  example.gsn.test.dot  example.gsn.test.md  font_metrics.yaml  gen_examples_for_tests.sh  integration_tests.rs  inval2_instance.gsn.yaml  inval3_instance.gsn.yaml  inval4_instance.gsn.yaml  invalid1.yaml  invalid2.yaml  issue249.yaml  issue250.yaml  issue313.yaml  issue339.yaml  issue365.yaml  issue371.yaml  issue372.yaml  issue377.yaml  issue385.yaml  issue389.yaml  issue391_1.yaml  issue391_2.yaml  issue393_1.yaml  issue393_2.yaml  issue396.yaml  issue407.yaml  issue433_1.yaml  issue433_2.yaml  (+20 more)
(+35 files in other folders)
