[package]
name = "gsn2x"
description = "Tool to create a graphical representation from a Goal Structuring Notation in YAML format."
keywords = ["gsn", "yaml", "svg", "assurancecases"]
categories = ["visualization", "rendering::data-formats"]
authors = ["Jonas Wolf <jonas.wolf@jonaswolf.org>"]
version = "2.8.4"
edition = "2021"
license = "CC-BY-4.0"
repository = "https://github.com/jonasthewolf/gsn2x"
documentation = "https://jonasthewolf.github.io/gsn2x"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0" # Only std feature
chrono = { version = "0.4", default-features = false, features = ["clock"]}
clap = { version = "4.4", default-features = false, features = ["std", "cargo", "help", "usage", "suggestions", "color"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_yaml = "0.9" # No features
svg = "0.14" # No features
font-loader = "0.11" # No features
glyph_brush_layout = "0.2" # No featues

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "3.0"
regex = "1.10"

[profile.release]
codegen-units = 1
lto = true
strip = true
