[package]
name = "gsn2x"
description = "Tool to create a graphical representation from a Goal Structuring Notation in YAML format."
keywords = ["gsn", "yaml", "svg", "assurancecases"]
categories = ["visualization", "rendering::data-formats"]
authors = ["Jonas Wolf <jonas.wolf@jonaswolf.org>"]
version = "3.3.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/jonasthewolf/gsn2x"
documentation = "https://jonasthewolf.github.io/gsn2x"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0" # Only std feature
clap = { version = "4.5", default-features = false, features = [
    "std",
    "cargo",
    "help",
    "usage",
    "suggestions",
    "color",
] }
font-loader = "0.11" # No features
glyph_brush_layout = "0.2" # No featues
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_yml = "0.0" # No features
svg = "0.18" # No features
time = { version = "0.3", default-features = false, features = ["formatting"] }

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"
regex = "1.11"

[profile.release]
codegen-units = 1
lto = true
strip = true
