[package]
name = "gsn2x"
description = "Tool to create a graphical representation from a Goal Structuring Notation in YAML format."
keywords = ["gsn", "yaml", "svg", "assurancecases"]
categories = ["visualization", "rendering::data-formats"]
authors = ["Jonas Wolf <jonas.wolf@jonaswolf.org>"]
version = "4.2.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/jonasthewolf/gsn2x"
documentation = "https://jonasthewolf.github.io/gsn2x"

# See more keys and their definitions at https://   doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0" # Only std feature
clap = { version = "4.5", default-features = false, features = [
    "std",
    "cargo",
    "help",
    "usage",
    "suggestions",
    "color",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_yaml_ng = "0.10" # No features
svg = "0.18" # No features
time = { version = "0.3", default-features = false, features = ["formatting"] }

[dev-dependencies]
assert_cmd = "2.1"
assert_fs = "1.1"
predicates = { version = "3.1", features = ["normalize-line-endings"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
